2004-10-26  Sushma Rai  <rsushma@novell.com>

	* lib/e2k-user-dialog.c (addressbook_clicked_cb): Setting
	the window non-modal, so that the user selection dialog
	gets the focus. Fixes #65047

2004-10-14  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* camel/camel-exchange-provider.c: (camel_provider_module_init):
	Initialize codeset here too.

2004-10-12  Sarfraaz Ahmed <asarfraaz@novell.com>

	* NEWS : Updated
	Created a new release for 2.0.2 and tagged after taking in
	Frederic's patch for codeset initialization.

2004-10-11  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/main.c: (main):
	* storage/ximian-connector-setup.c: (main):
	Initialize codeset for textdomain. Patch by Frederic Crozat.

2004-10-11  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Updated version to 2.0.2
	* NEWS : Updates

2004-10-08  Sarfraaz Ahmed <asarfraaz@novell.com>
	
	* calendar/e-cal-backend-exchange-calendar.c (book_resource): Make
	connector actually create the meeting for the resource without
	sending a mail.
	(send_objects): Send the proper users list back to the client.
	(modify_object_with_href): This now enables to send a meeting for
	a specific href. This fixes #67510

2004-10-04  Dan Winship  <danw@novell.com>

	* mail/mail-stub-exchange.c (send_message): Remove code that was
	setting the message to use HTTP 1.0, which isn't needed with
	libsoup 2.2, and which was causing 65685.

2004-09-24  Christophe Merlet  <redfox@redfoxcenter.org>

        * configure.in: Added 'fr' (French) to ALL_LINGUAS.

2004-09-22  Craig Jeffares <cjeffares@novell.com>

        * configure.in: Added 'it, zh_TW & zh_CN' to ALL_LINGUAS.

2004-09-17  Dan Winship  <danw@novell.com>

	Pull up changes from HEAD for 2.0.1 (all from Sushma)

	* storage/exchange-hierarchy-favorites.c 
	(exchange_hierarchy_favorites_add_folder): Checking for 
	permanent_uri being NULL. Fixes #65850

	* storage/exchange-config-listener.c (account_changed):